--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ parso==0.5.1
 pexpect==4.7.0
 pickleshare==0.7.5
 prompt-toolkit==3.0.2
+psycopg2-binary==2.8.4
 ptyprocess==0.6.0
 Pygments==2.5.2
 pytz==2019.3
